Thu Apr  4 18:08:42 EST 2002	Brian Bruns	<camber@ais.org>

	*src/odbc/odbc.c(SQLFetch): missed last column when transfering binds

Thu Mar 28 00:10:46 EST 2002	Mark Lilback <mark@lilback.com>

	* src/tds/token.c: recognizes extra column info when processing
	result sets via tds7 (writeable, nullable, identity)

Wed Mar 27 16:00:00 CST 2002    Steve Langasek <vorlon@netexpress.net>

	* src/tds/read.c: commit a fix for goodread() that I've been
      sitting on.  EINTR handling still needs improvement in the common 
      case, but killing one out of two bugs is still progress.

Sun Mar 24 09:19:19 EST 2002	Brian Bruns	<camber@ais.org>

	* acinclude.m4: modified SSL check to use config.h

Thu Mar 21 22:21:29 EST 2002	Brian Bruns	<camber@ais.org>

	* include/tdsodbc.h: added row field to stmt struct
	* src/odbc/odbc.c: move bind transfer to SQLFetch from _SQLExecute

Thu Mar 14 20:53:46 EST 2002	Brian Bruns <camber@ais.org>

	* acinclude.m4: added macro for openssl
	* configure.in: added --with-ssl option
	* src/ctlib/unittest/Makefile.am: added t0005 test
	* src/tds/Makefile.am: added challege.c to compile list
	* src/tds/convert.c: fix datetime -> string convert for -1 destlen
	* src/tds/token.c: fix dynamic token handling if not seen prior

Mon Mar 06 20:43:22 EST 2002	Mark Lilback <mark@lilback.com>

	* src/tds/config.c: does not do a lookup if passed an ip address. 
	compile flag added to not do reverse lookups on ip addresses.

Wed Feb 20 16:12:58 EST 2002	Brian Bruns	<camber@ais.org>

	* src/odbc/odbc.c: added SQL_DESC_TYPE to switch statement

Sun Feb 17 15:14:20 EST 2002	Brian Bruns	<camber@ais.org>
	* include/tds.h.in: add TDSLOCINFO structure and move date format stuff 
	to there.
	* include/cspublic.h: add locale pointer to CS_CONNECTION
	* include/tdsodbc.h: add locale pointer to _henv structure
	* src/tds/convert.c: strftime return not checked, broke sqsh
	* src/tds/login.c: tds_connect now takes locale parameter
	* src/tds/mem.c: add locales